ACE-338 Applied the patch after cleaning up whitespace.
git-svn-id: https://svn.apache.org/repos/asf/ace/trunk@1462999 13f79535-47bb-0310-9956-ffa450edef68